--- a/docs/figures/diagram.tex
+++ b/docs/figures/diagram.tex
@@ -2,7 +2,8 @@
 \usepackage{tikz}
 \usetikzlibrary{external, calc, positioning,decorations.markings,arrows.meta}
 
-%\tikzexternalize
+\renewcommand{\familydefault}{\sfdefault}
+\tikzexternalize
 
 \begin{document}
 \begin{tikzpicture}[
