Minor changes, added QR code

--- a/docs/presentation/presentation.tex
+++ b/docs/presentation/presentation.tex
@@ -42,7 +42,7 @@
 		$\implies$ this means we need to convert digital 
 		to analog signals.
 	\item Pixel data is transmitted by ``scanning" 
-		through the image.
+		across the screen.
 	\item Frame and line synchronisation is done 
 		by digital sync signals on dedicated lines.
 	\end{itemize}
@@ -90,11 +90,19 @@
 	\includegraphics[width=\textwidth]{../figures/diagram-figure0.pdf}
 \end{frame}
 
-\begin{frame}{Demo}
+\begin{frame}{Pong game demo}
 \end{frame}
 
 \begin{frame}{Questions?}
-Thank you for your attention.
+	\begin{minipage}{0.49\textwidth}
+		\begin{center}
+		\includegraphics[width=\textwidth]{../qr.png}
+		The project is on Github!
+	\end{center}
+	\end{minipage}
+	\begin{minipage}{0.49\textwidth}
+	Thank you for your attention.
+	\end{minipage}
 \end{frame}
 
 \end{document}
